brain/sources/prod-metadata/objects/Internal_Interview_Section_Log__c/Internal_Interview_Section_Log__c.object-meta.xml
<CustomObject>
    <label>Internal Interview Section Log</label>
    <nameField>
        <displayFormat>IISL-{00000}</displayFormat>
        <label>Internal Interview Section Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Interview Section Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>