brain/sources/prod-metadata/objects/Internal_Interview_Section_Log__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>