brain/sources/prod-metadata/objects/Internal_Interview_Section_Log__c/fields/Internal_Interview__c.field-meta.xml
<CustomField>
    <fullName>Internal_Interview__c</fullName>
    <label>Internal Interview</label>
    <referenceTo>Internal_Interview__c</referenceTo>
    <relationshipLabel>Internal Interview Section Logs</relationshipLabel>
    <relationshipName>Internal_Interview_Section_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>