brain/sources/prod-metadata/objects/Internal_Interview_Section_Log__c/fields/Section_Comment__c.field-meta.xml
<CustomField>
    <fullName>Section_Comment__c</fullName>
    <label>Section Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>