brain/sources/prod-metadata/objects/Internal_Interview_Section_Log__c/fields/Section_Score__c.field-meta.xml
<CustomField>
    <fullName>Section_Score__c</fullName>
    <label>Section Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>